# devtest-testcases

./: README.md  dev-requirements.txt  invoke.yaml  mdl-style.rb  pyproject.toml  requirements.txt  setup.cfg  setup.py  tasks.py
testcases/: _template.py
testcases/examples/: demo.py  eat.py  interactive.py  remotecode.py
